--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     /* max-width: 1100px; */
     margin: 0;
     padding: 0 4%;
+    /* align-items: center; */
     
 }
 
@@ -110,6 +111,47 @@ header {
 
 .linha {
     width: 100%;
-    height: 5px;
-    background-color: black;
+    height: 60px;
+    background-color: rgb(7, 181, 146);
+    display: flex;
+    align-items:center;
+    justify-content:flex-start;
+}
+
+ul {
+    /* width: 500px; */
+    list-style: none;
+    background-color: rgb(7, 181, 146);
+}
+
+ul li {
+    float: left;
+    background-color: #90EE90;
+    position: relative;
+    border-radius: 15px;
+    display: flex;
+    margin-left: 40px;
+    margin-right: 40px;
+    width: 110px;
+    font-weight: 400;
+    text-align: center;
+}
+
+ul li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 110px;
+    padding: 8px;
+    text-decoration: none;
+    color: black;
+    transition: 0.7s;
+    background-color: #90EE90;
+    border-radius: 10px;
+}
+
+ul li:hover > a{ /* Quando passarmos o mouse sobre a LI colocamos estilo no A */
+    background-color: #2B4F6B;
+    border-radius: 0px; 
+    position:relative;
 }
