--- a/copia.css
+++ b/copia.css
@@ -109,67 +109,42 @@ header {
 
 /*linha de separação*/
 
-.linha {
-    width: 100%;
-    height: 60px;
-    background-color:#FFFAF0;
-    display: flex;
-    align-items:center;
-    justify-content:flex-start;
-}
-
 ul {
-    /* width: 500px; */
     list-style: none;
-    background-color: #FFFAF0;
-    transition: 0.9s;
+    background: #8c52ff;
 }
 
 ul li {
-    float: left;
-    background-color: #90EE90;
+    display: inline-block;
     position: relative;
-    border-radius: 15px;
-    display: flex;
-    margin-left: 40px;
-    margin-right: 40px;
-    width: 110px;
-    font-weight: 400;
-    text-align: center;
-    align-items: center;
-    transition: 0.9s;
+    background: #8c52ff;
 }
 
 ul li a {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 110px;
-    padding: 8px;
+    display: block;
+    padding: 20px 25px;
+    color: #000000;
     text-decoration: none;
-    color: black;
-    transition: 0.7s;
-    /* background-color: #90EE90; */
-    background-color: #FFFAF0;
-    border-radius: 10px;
-    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    font-size: 20px;
 }
 
-ul li:hover > a{ /* Quando passarmos o mouse sobre a LI colocamos estilo no A */
-    /* background-color: #ffedc8; */
-    border-radius: 5px; 
-    position:relative;
+ul li ul.dropdown li {
+    display: block;
 }
 
-.setafoda {
-    width: 10px;
-    height: 10px;
-    transition: 0.6s;
-    
+ul li ul.dropdown {
+    width: 100%;
+    background: #8c52ff;
+    position: absolute;
+    z-index: 999;
+    display: none;
 }
 
-ul li a:hover > .setafoda{
-    transform: rotateZ(-180deg);
+ul li a:hover {
+    background: #6d30e9;
 }
 
-
+ul li:hover ul.dropdown {
+    display: block;
+}
